--- a/theblog/templates/update_post.html
+++ b/theblog/templates/update_post.html
@@ -3,7 +3,7 @@
 {% block content %} 
 
 <h1>แก้ไขบทความ</h1><br>
-
+{% if user.is_authenticated %}
 <div class="form-group">
     <form method="POST">
         {% csrf_token %}
@@ -11,5 +11,8 @@
         <button class="btn btn-secondary">แก้ไขเพิ่มเติม</button>
     </form>
 </div>
+{% else %}
+    กรุณาเข้าสู่ระบบก่อนทำการแก้ไข
+{% endif %}
 
 {% endblock content %}
