--- a/theblog/templates/article_details.html
+++ b/theblog/templates/article_details.html
@@ -3,12 +3,16 @@
 {% block title %}{{post.title_tag}}{% endblock title %}
 {% block content %}
     <h1>{{post.title}}</h1>
-    <small>โดย : {{post.author.first_name}} {{post.author.last_name}} - 
+    <small>โดย : {{post.author.first_name}} 
+                 {{post.author.last_name}} 
+               : {{ post.post_date }} - 
+    {% if user.is_authenticated %}
     <a href="{% url 'update_post' post.pk %}">(แก้ไข)</a> - 
     <a href="{% url 'delete_post' post.pk %}">(ลบ)</a>
+    {% endif %}
     </small>
     <hr>
-    เนื้อเรื่อง : {{post.body}}
+    เนื้อเรื่อง : {{post.body|safe}}
     <br><br>
     <a href="{% url 'home' %}" class="btn btn-secondary">ย้อนกลับ</a>
 {% endblock content %}
