--- a/theblog/templates/base.html
+++ b/theblog/templates/base.html
@@ -21,9 +21,50 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           
+              <!--Category Menu Code-->
+              {% if cat_menu %}
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  หมวดหมู่บทความ
+                </a>
+                <ul class="dropdown-menu">
+                  {%  for item in cat_menu %}
+                    <li><a class="dropdown-item" 
+                      href="{% url 'category' item|slugify %}">{{ item }}</a></li>
+                  {% endfor %}
+             
+                  
+                </ul>
+              </li>
+              {% else%}
+                  category-list
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'category-list' %}">หมวดหมู่บทความ</a>
+                  </li>
+              {% endif %}
+            
+              {% if user.is_authenticated %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'add_post' %}">เขียนบทความ</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'add_category' %}">สร้างหมวดหมู่บทความ</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">ออกจากระบบ</a>
+              </li>
+            {% else %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'register' %}">สม้ครสมาชิก</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'login' %}">เข้าสู่ระบบ</a>
+                </li>
+            {% endif %}
+
+              
+              
+              
               
             </ul>
           </div>
