--- a/theblog/templates/delete_post.html
+++ b/theblog/templates/delete_post.html
@@ -3,6 +3,7 @@
 {% block content %} 
 
 <h1>ลบบทความ</h1><br>
+{% if user.is_authenticated %}
 <h3>Delete : {{ post.title }}</h3>
 <div class="form-group">
     <form method="POST">
@@ -11,5 +12,8 @@
         <button class="btn btn-secondary">ลบบทความ</button>
     </form>
 </div>
+{% else %}
+    กรูนาเข้าสู่ระบบก่อนทำการลบ
+{% endif %}
 
 {% endblock content %}
