--- a/theblog/templates/home.html
+++ b/theblog/templates/home.html
@@ -1,20 +1,25 @@
 {% extends 'base.html' %}
 {% block title %}{{post.title_tag}}{% endblock title %}
 {% block content %} 
-<h1>Post</h1>
+<h1>บทความทั้งหมด</h1>
 <ul>
     {% for post in object_list %}
     <li>
-        <a href="{% url 'article-detail' post.pk %}">{{post.title}}</a> 
+        <a href="{% url 'article-detail' post.pk %}">{{post.title}}</a> |
+        <a href="{% url 'category' post.category|slugify %}">{{post.category}}</a>
         | {{post.author.first_name}} 
         {{post.author.last_name}} - 
         <small>
-            <a href="{% url 'update_post' post.pk %}">(แก้ไข)</a>
-            <a href="{% url 'delete_post' post.pk %}">(ลบ)</a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'update_post' post.pk %}">(แก้ไข)</a>
+                <a href="{% url 'delete_post' post.pk %}">(ลบ)</a>
+            {% endif %}
         </small>
         <br>
-        - {{post.body}}
+        - {{post.body|slice:":200"|safe}} <br>
+        {{ post.post_date }}
     </li><br>
     {% endfor %}
 </ul>
+
 {% endblock content %}
